--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
     ],
     "require": {
         "onelogin/php-saml": "^3.0",
-        "symfony/dependency-injection": "^5.4",
+        "symfony/dependency-injection": "^5.4 || ^6",
         "symfony/deprecation-contracts": "^2.1",
         "symfony/event-dispatcher-contracts": "^2.4",
-        "symfony/framework-bundle": "^5.4",
-        "symfony/security-bundle": "^5.4"
+        "symfony/framework-bundle": "^5.4 || ^6",
+        "symfony/security-bundle": "^5.4 || ^6"
     },
     "require-dev": {
         "dms/phpunit-arraysubset-asserts": "^0.2.0",
